# delta-maintenance

./: .coverage  .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/delta_maintenance/: __init__.py  __main__.py
src/delta_maintenance/cli/: cli.py
src/delta_maintenance/core/: core.py
src/delta_maintenance/models/: models.py
tests/: conftest.py  test_cli.py  test_delta.py  test_delta_s3.py  test_models.py  test_result.py
